@@ -1,5 +1,9 @@
 [b]Version 0.6.11[/b]:
 
+(2012-01-19)
+ * The title of youtube videos is displayed correctly. And the stream url is 
+   replaced by the url of the youtube page.
+
 (2012-01-14)
  * Added the Croatian translation, by jk <marshsmello@gmail.com>
 
